エントリーポイント概要でのみ使用していた処理をJigTypeからExpressionObjectに移動